# Evo-Skill

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
docker/: Dockerfile.agents  build-agents.sh
evoskill/: client.py  config.py  memory.py  models.py  render.py
evoskill/agent_runtime/: __init__.py  agent_context.py  docker_config.py  docker_environment.py  installed_agent.py  session_runner.py
evoskill/agent_runtime/agents/: __init__.py  claude_code_agent.py  codex_agent.py
evoskill/agent_runtime/templates/: install-claude-code.sh.j2  install-codex.sh.j2
evoskill/cli/: chat.py  commands.py
evoskill/embeddings/: bge_m3.py  factory.py
evoskill/interactive/: capability_analyzer.py  config.py  retrieval.py  rewriting.py  selection.py  skill_versions.py  usage_tracking.py
evoskill/llm/: base.py  factory.py
evoskill/management/: __init__.py  agent_failure_extraction.py  agent_trajectory_extraction.py  artifacts.py  bootstrap.py  extraction.py  learner_extraction.py  maintenance.py  reviewer.py
evoskill/management/formats/: agent_skill.py
evoskill/management/stores/: base.py  factory.py  inmemory.py  local.py
evoskill/management/vectors/: __init__.py  base.py  factory.py
evoskill/utils/: units.py
